<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.akzonobel.test</groupId>
    <artifactId>salmonAutomationFramework</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <cucumber.version>1.1.6</cucumber.version>
        <selenium.version>2.43.1</selenium.version>
        <junit.version>4.11</junit.version>
        <slf4jVersion>1.7.7</slf4jVersion>
    </properties>


    <!-- Test Profile -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>

                            <threadCount>4</threadCount>
                            <perCoreThreadCount>true</perCoreThreadCount>
                            <forkCount>4</forkCount>
                            <reuseForks>false</reuseForks>
                            <!-- <argLine>-Xmx1024m</argLine>
                             <argLine>-XX:MaxPermSize=256m</argLine>
                             <argLine>-Dfile.encoding=UTF-8</argLine>
                             <useFile>false</useFile> -->
                            <includes>
                                <include>${testToRun}</include>
                            </includes>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.salmon.test.ReportMerger</mainClass>
                    <arguments>
                        <argument>target/cucumber-report/</argument>
                    </arguments>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
                    <encoding>UTF-8</encoding>

                    <resources>
                        <resource>
                            <directory>src/main/resources</directory>
                            <filtering>true</filtering>
                        </resource>
                    </resources>

                </configuration>
            </plugin>


        </plugins>

        <!-- Instructing the resources plugin to filter certain directories -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>


    </build>

    <profiles>
        <!-- Development environment @ my laptop -->
        <profile>
            <id>dev</id>
            <properties>
                <testToRun>**/*AT.class</testToRun>
                <site.url>http://www.sysstg.lloydspharmacy.com/</site.url>
                <api.url>http://www.dulux.com.sg/</api.url>
                <site.port></site.port>
                <site.basepath></site.basepath>
                <browser>firefox</browser>
                <webdriver.chrome.driver>tools/chromedriver/linux64/chromedriver</webdriver.chrome.driver>
            </properties>
        </profile>

        <!-- Single Test @ my laptop -->
        <profile>
            <id>single</id>
            <properties>
                <testToRun>**/*Single.class</testToRun>
                <site.url>http://www.sysstg.lloydspharmacy.com/</site.url>
                <api.url>http://www.dulux.com.sg</api.url>
                <site.port></site.port>
                <site.basepath></site.basepath>
                <browser>chrome</browser>
                <webdriver.chrome.driver>tools/chromedriver/linux64/chromedriver</webdriver.chrome.driver>

            </properties>
        </profile>

        <!-- Jenkins environment @ deploy server -->
        <profile>
            <id>deploy</id>
            <properties>
                <testToRun>**/*JenkinsSuite.class</testToRun>
                <site.url>http://www.sysstg.lloydspharmacy.com/</site.url>
                <api.url>http://www.dulux.com.sg/</api.url>
                <site.port></site.port>
                <site.basepath></site.basepath>
                <browser>firefox</browser>
                <webdriver.chrome.driver>/usr/local/bin/chromedriver</webdriver.chrome.driver>
            </properties>
       </profile>
    </profiles>


    <dependencies>

        <!-- Cucumber -->
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-jvm-deps</artifactId>
            <scope>test</scope>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.picocontainer</groupId>
            <artifactId>picocontainer</artifactId>
            <version>2.14.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Cucumber -->
        <!--Selenium Webdriver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>${selenium.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>${selenium.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit-dep</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!--Selenium Webdriver -->

        <!-- Api Level Testing -->
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>2.3.4</version>
        </dependency>
        <!-- Api Level Testing -->

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>

        <!--Logger -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>

        <!-- lombok for Getter Setters-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.14.8</version>
            <scope>provided</scope>
        </dependency>
        <!--lombok -->

        <!-- matchers -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
        <!-- matchers -->


    </dependencies>
</project>
